Updated code to be Java 8 compatible and tidied some code.